Add ability to delete a note

--- a/app/assets/stylesheets/notes.css.scss
+++ b/app/assets/stylesheets/notes.css.scss
@@ -59,6 +59,19 @@
     display: none;
   }
 
+  .destroy-note {
+    position: absolute;
+    top: 7px;
+    right: 5px;
+    display: none;
+  }
+
+  &:hover {
+    .destroy-note {
+      display: block;
+    }
+  }
+
   &.editing {
     border-color: blue;
 
